--- a/DemoMVC.WebUi/Views/Message/Index.cshtml
+++ b/DemoMVC.WebUi/Views/Message/Index.cshtml
@@ -12,9 +12,9 @@
     bool AllowedAdd = _base.CheckPermission(formCode, AccessPermission.IsAdd);
 }
 @Html.Hidden("hdnFormAccessCode", formCode)
-<div class="coman_content">
+<div class="coman_content mx-4">
     <!--This is Title div -->
-    <div class="subheader m-4">
+    <div class="subheader mx-4">
         <div class="left_title">
             <h2>@ViewBag.Title</h2>
             <div class="left breadcrumb_list">
@@ -33,7 +33,7 @@
         </div>
     </div>
     <!--END Title div-->
-    <div class="common_white_box listingpage inlinegrid_edit m-4">
+    <div class="common_white_box listingpage inlinegrid_edit mx-4">
         <div class="page-loader k-loading-image"></div>
         @(Html.Kendo().Grid<DemoMVC.Models.MessageGridModel>()
           .Name("gridmessage")
