--- a/DemoMVC.WebUi/Views/UserProfile/Index.cshtml
+++ b/DemoMVC.WebUi/Views/UserProfile/Index.cshtml
@@ -16,11 +16,11 @@
     bool AllowedDelete = _base.CheckPermission(formCode, AccessPermission.IsDelete);
 }
 
-<h2 class="text-center fw-bold mt-4">User List</h2>
-
-<div class="d-flex justify-content-end m-2">
-    @Html.ActionLink("Create New", "Create", "UserProfile",null, new { @class = "btn btn-warning btn rounded-pill px-4 shadow-sm fw-bold m-3" })
-    <button class="btn btn-outline-success btn rounded-pill px-4 shadow-sm" onclick="exportToExcel()" style="height:38px; margin-top:15px">Export to Excel</button>
+<div class="d-flex justify-content-between align-items-center m-2">
+    <h2 class="fw-bold mx-3 ">Users</h2>
+    <div>
+        @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-warning btn rounded-pill px-4 shadow-sm fw-bold m-3" })
+    </div>
 </div>
 <div class="common_white_box listingpage m-4">
     <div class="page-loader k-loading-image"></div>
