--- a/DemoMVC.WebUi/Views/ActivityLog/Index.cshtml
+++ b/DemoMVC.WebUi/Views/ActivityLog/Index.cshtml
@@ -13,9 +13,9 @@
     bool AllowedDelete = _base.CheckPermission(formCode, AccessPermission.IsDelete);
 }
 @Html.Hidden("hdnFormAccessCode", formCode)
-<div class="coman_content m-4">
+<div class="coman_content mx-4">
     <!--This is Title div -->
-    <div class="subheader">
+    <div class="subheader mx-4">
         <div class="left_title">
             <h2>@ViewBag.Title</h2>
             <div class="left breadcrumb_list">
@@ -30,7 +30,7 @@
     <!--END Title div-->
 
 
-    <div class="common_white_box listingpage m-4">
+    <div class="common_white_box listingpage mx-4">
         <div class="page-loader k-loading-image"></div>
         @(Html.Kendo().Grid<ActivityLogGridModel>()
           .Name("gridActivityLog")
