--- a/DemoMVC.WebUi/Views/CommonLookup/Index.cshtml
+++ b/DemoMVC.WebUi/Views/CommonLookup/Index.cshtml
@@ -17,9 +17,9 @@
 @Html.Hidden("hdnFormAccessCode", formCode)
 
 @Html.Hidden("hdnKendoGridId", "gridcommonlookup")
-<div class="coman_content">
+<div class="coman_content mx-4">
     <!--This is Title div -->
-    <div class="subheader m-4">
+    <div class="subheader mx-4">
         <div class="left_title">
             <h2>@ViewBag.Title</h2>
             <div class="left breadcrumb_list">
@@ -33,16 +33,14 @@
         <div class="subheader_right">
             @if (AllowedAdd)
             {
-                <div class="d-flex justify-content-end m-2">
-                    @Html.ActionLink("Create New", "Create", "CommonLookup" ,null, new { @class = "btn btn-warning btn rounded-pill px-4 shadow-sm fw-bold m-3" })
-                    <button class="btn btn-outline-success btn rounded-pill px-4 shadow-sm" onclick="exportToExcel()" style="height:38px; margin-top:15px">Export to Excel</button>
+                <div class="d-flex justify-content-end">
+                    @Html.ActionLink("Create New", "Create", "CommonLookup" ,null, new { @class = "btn btn-warning btn rounded-pill  shadow-sm fw-bold" })
                 </div>
-                @*<a class="button button_primary button_rounded" href="javascript:void(0);" id="btnAdd">Add</a>*@
             }
         </div>
     </div>
     <!--END Title div-->
-    <div class="common_white_box listingpage inlinegrid_edit m-4">
+    <div class="common_white_box listingpage inlinegrid_edit mx-4">
         <div class="page-loader k-loading-image"></div>
         @(Html.Kendo().Grid<DemoMVC.Models.CommonLookUpGridModel>()
           .Name("gridcommonlookup")
@@ -84,78 +82,9 @@
               .Sort(sortable=>sortable.Add("Type").Ascending())
               .Read(read => read.Action("GetGridData", "CommonLookup")).PageSize(10)
           ))
-        @*@(Html.Kendo().Grid<AiRecruitment.Model.CommonLookUpGridModel>()
-              .Name("gridcommonlookup")
-              .AutoBind(false)
-              .Columns(columns =>
-              {
-                  columns.Bound(c => c.Id).Hidden(true);
-                  columns.Bound(c => c.Type).Title("Type");
-                  columns.Bound(c => c.Code).Title("Code").ClientTemplate("<span class='uppercase' >#=Code#</span>");
-                  columns.Bound(c => c.Name).Title("Name");
-                  columns.Bound(c => c.DisplayOrder).Title("Display Order").Width(100);
-                  columns.Bound(c => c.Comment).Title("Comment").Width(300);
-                  columns.Bound(c => c.IsActive).Width("5%").HeaderHtmlAttributes(new { @class = "center_text" }).HtmlAttributes(new { @class = "kendogrid_Action center-text" }).ClientTemplate("# if(IsActive == true) {#<i class='fa fa-check'></i># } else { #<i class='fa fa-close'></i># } #").Title("Active").Filterable(filterable => filterable.Messages(m => m.IsFalse("No").IsTrue("Yes")));
-                  columns.Command(command => { command.Edit(); }).Width(50).Hidden(!(AllowedAdd || AllowedEdit)).Title("Edit");
-              })
-              .ToolBar(toolbar => toolbar.Create())
-              .Editable(editable => editable.Mode(GridEditMode.PopUp).TemplateName("_CommonLookUpEditor"))
-              .Events(evt => evt
-                  .DataBinding("fnKendoGridCommonDataBinding")
-                  .DataBound("fnKendoGridDataBoundEventForCommonLookup")
-              )
-              .NoRecords("No record found")
-              .Sortable()
-              .Pageable(pageable => pageable
-                  .Refresh(true)
-                  .PageSizes(new[] {10,20, 50, 100, 200 })
-                  .ButtonCount(5)
-              )
-            .Filterable(filter => filter
-                    .Mode(GridFilterMode.Row)
-                    .Extra(false)
-                    .Operators(o => o.ForString(f => f.Clear().Contains("Contains").DoesNotContain("Does Not Contain").StartsWith("Starts With").EndsWith("Ends With").IsEqualTo("Equal To").IsNotEqualTo("Not Equal To")))
-                    .Operators(o => o.ForNumber(g => g.Clear().IsEqualTo("EqualTo").IsNotEqualTo("Not Equal To").IsGreaterThan("Greater Than").IsGreaterThanOrEqualTo("Greater Than Or Equal To").IsLessThan("Less Than").IsLessThanOrEqualTo("Less Than Or Equal To")))
-                )
-                .Events(events=>events.Edit("onGridEdit"))
-              .DataSource(dataSource => dataSource
-                       .Ajax()
-                       .Sort(sortable=>sortable.Add("Type").Ascending())
-                       .Create(create => create.Action("CommonLookup_Create", "CommonLookup"))
-                       .Read(read => read.Action("GetGridData", "CommonLookup"))
-                       .Update(update => update.Action("CommonLookUp_Update", "CommonLookUp"))
-                       .Destroy(destroy => destroy.Action("CommonLookup_Destroy", "CommonLookUp"))
-                       .Events(events=>events.Error("error_handler"))
-                       .PageSize(10)
-                    .Model(model =>
-                    {
-                        model.Id(c => c.Id);
-                        model.Field(c => c.Id).Editable(false);
-                    })
-              ))*@
     </div>
 </div>
 <script>
-    //$(document).ready(function () {
-    //    $('#gridcommonlookup').data('kendoGrid').dataSource.read();
-    //    $('#gridcommonlookup').data('kendoGrid').refresh();
-
-    //    $('#btnAdd').click(function () {
-
-    //        grid = $("#gridcommonlookup").data("kendoGrid");
-    //        grid.addRow();
-    //    });
-    //});
-    //function fnKendoGridDataBoundEventForCommonLookup() {
-    //    $(".k-grid-toolbar").hide();
-    //    fnKendoGridDataBoundEvent.apply(this);
-    //}
-    //function onGridEdit(e) {
-    //    if(e.model.Id > 0){
-    //        $('[name="Code"]').attr("readonly", true);
-    //    }
-    //}
-
     $(document).ready(function () {
         $('#gridcommonlookup').data('kendoGrid').dataSource.read();
         $('#gridcommonlookup').data('kendoGrid').refresh();
