--- a/DemoMVC.WebUi/Views/Home/Index.cshtml
+++ b/DemoMVC.WebUi/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Dashboard";
 }
 
-<h2 class="dashboard-heading">Dashboard</h2
+<h2 class="dashboard-heading">Dashboard</h2>
 <br />
 <br />
 <br />
@@ -59,23 +59,6 @@
                 options: {
                     responsive: true,
                     maintainAspectRatio: false,
-                    //scales: {
-                    //    x: {
-                    //        ticks: {
-                    //            font: { size: 14 }, // Larger font size for better visibility
-                    //            autoSkip: false,
-                    //            color:"white",
-
-                    //        }
-                    //    },
-                    //    y: {
-                    //        beginAtZero: true,
-                    //        ticks: {
-                    //            font: { size: 14 } ,// Increase font size for Y-axis
-                    //            color : "white"
-                    //        }
-                    //    }
-                    //},
                     plugins: {
 
                         legend: {
