--- a/DemoMVC.WebUi/Views/Exam/_EmailInputPartial.cshtml
+++ b/DemoMVC.WebUi/Views/Exam/_EmailInputPartial.cshtml
@@ -76,7 +76,8 @@
             success: function (response) {
                 if (response.success) {
                     Swal.fire({ title: 'Exam Link Generated', icon: 'success' }).then(() => {
-                        $("#emailModal").modal("hide");
+                        $("#emailModal").modal("hide"); // ❌ Bootstrap 4 style
+
                     });
                 } else {
                     Swal.fire("Error", response.message, "error");
