--- a/DemoMVC.WebUi/Views/Exam/_ExamQuestionsPartial.cshtml
+++ b/DemoMVC.WebUi/Views/Exam/_ExamQuestionsPartial.cshtml
@@ -19,7 +19,7 @@
 {
     
     <div class="card shadow-sm p-3 mb-4">
-        <h5 class="fw-bold">Q - @count. @question.QuestionText</h5>
+        <h5 class="fw-bold">Q - @count. @question.QuestionText (Marks :- @question.Marks)</h5>
         
         <!-- Show Image if Available -->
         @if (!string.IsNullOrEmpty(question.QuestionImage))
