--- a/DemoMVC.WebUi/Views/Shared/_Layout.cshtml
+++ b/DemoMVC.WebUi/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 
     <script src="@Url.Content("~/Content/inc/bootstrap/js/popper.min.js")"></script>
     <script src="@Url.Content("~/Content/inc/bootstrap/js/bootstrap.min.js")"></script>
-    @*<script src="@Url.Content("~/Content/inc/bootstrap/js/bootstrap-datepicker/bootstrap-datepicker.js")"></script>*@
+    <script src="@Url.Content("~/Content/inc/bootstrap/js/bootstrap-datepicker/bootstrap-datepicker.js")"></script>
     <script src="@Url.Content("~/Content/inc/bootstrap/js/bootstrap-tagsinput/bootstrap-tagsinput.min.js")"></script>
     <!-- BEGIN META -->
     <meta name="keywords" content="your,keywords">
@@ -21,7 +21,7 @@
     <!-- BEGIN STYLESHEETS -->
     <link type="text/css" rel="stylesheet" href="@Url.Content("~/Content/css/fonts/fonts.css")" />
     <link type="text/css" rel="stylesheet" href="@Url.Content("~/Content/inc/bootstrap/css/bootstrap.min.css")" />
-    @*<link type="text/css" rel="stylesheet" href="@Url.Content("~/Content/inc/bootstrap/css/bootstrap-datepicker/datepicker3.css")" />*@
+    <link type="text/css" rel="stylesheet" href="@Url.Content("~/Content/inc/bootstrap/css/bootstrap-datepicker/datepicker3.css")" />
     <link type="text/css" rel="stylesheet" href="@Url.Content("~/Content/inc/bootstrap/css/bootstrap-tagsinput/bootstrap-tagsinput.css")" />
     <link type="text/css" rel="stylesheet" href="@Url.Content("~/Content/inc/select2/select2.min.css")" />
     <link type="text/css" rel="stylesheet" href="@Url.Content("~/Content/inc/font-awesome/css/font-awesome.min.css")" />
